# Cplusplus_project1

./: CMakeLists.txt  inventario.csv  main.cpp
include/: Inventario.hpp  Item.hpp  Menu.hpp  Vector.hpp
perdida_memoria.dSYM/Contents/: Info.plist
perdida_memoria.dSYM/Contents/Resources/DWARF/: perdida_memoria
perdida_memoria.dSYM/Contents/Resources/Relocations/aarch64/: perdida_memoria.yml
src/: Inventario.cpp  Menu.cpp
tests/: CMakeLists.txt
